--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ button {
 }
 
 .picture {
-  flex-basis: calc(100% - 2 * var(--set-gap)) / 3;
+  flex-basis: calc((100% - 2 * var(--set-gap)) / 3);
 }
 
 /*Team section  */
@@ -271,7 +271,7 @@ button {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-  flex-basis: calc(100% - 3 * var(--set-gap)) / 4;
+  flex-basis: calc((100% - 3 * var(--set-gap)) / 4);
 }
 
 .user {
@@ -335,8 +335,7 @@ button {
 .img-card {
   border: 1px solid var(--frame-color);
   background-color: var(--white-color);
-  width: 360px;
-  flex-basis: calc(100% - 8 * var(--set-gap)) / 9;
+  flex-basis: calc((100% - 2 * var(--set-gap)) / 3);
 }
 
 .desc {
