--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ button {
 
 /* Container */
 .container {
-  width: 1128px;
+  width: 1158px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -105,10 +105,7 @@ button {
 .menu-list {
   display: flex;
   align-items: center;
-}
-
-.menu-item + .menu-item {
-  margin-left: 40px;
+  gap: 40px;
 }
 
 .link:hover,
@@ -155,17 +152,22 @@ button {
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: var(--white-color);
-  width: 496px;
+  max-width: 496px;
   height: 120px;
 }
 
 .hero-btn {
+  display: block;
   padding-top: 16px;
   padding-right: 32px;
   padding-bottom: 16px;
   padding-left: 32px;
   min-width: 169px;
   min-height: 56px;
+  margin-top: 0;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-left: auto;
 
   background-color: var(--design-color);
   border-radius: 4px;
@@ -233,9 +235,11 @@ button {
 }
 .list-possibilities {
   display: flex;
+  gap: var(--set-gap);
 }
-.item + .item {
-  margin-left: 24px;
+
+.item {
+  flex-basis: calc((100% - 3 * var(--set-gap)) / 4);
 }
 
 /* Third section */
@@ -266,12 +270,10 @@ button {
 }
 
 .card {
-  width: 264px;
   height: 380px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
   flex-basis: calc((100% - 3 * var(--set-gap)) / 4);
 }
 
@@ -281,14 +283,18 @@ button {
   padding-bottom: 32px;
   padding-left: 16px;
   text-align: center;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 /* Portfolio */
 .section-portfolio {
   padding-top: 96px;
-  padding-right: 0;
   padding-bottom: 96px;
-  padding-left: 0;
+  padding-left: 120px;
+  padding-right: 120px;
 }
 
 .btn-list {
@@ -297,10 +303,7 @@ button {
   justify-content: center;
   min-width: 586px;
   margin-bottom: 72px;
-}
-
-.btn-item + .btn-item {
-  margin-left: 24px;
+  gap: 24px;
 }
 
 .btn {
@@ -323,6 +326,7 @@ button {
 .btn:focus {
   color: var(--white-color);
   background-color: var(--action-color);
+  border: 1px solid transparent;
 }
 
 .list-img-card {
@@ -334,20 +338,17 @@ button {
 }
 
 .img-card {
-  border: 1px solid var(--frame-color);
-  background-color: var(--white-color);
   flex-basis: calc((100% - 2 * var(--set-gap)) / 3);
 }
 
 .desc {
-  margin-top: 32px;
-  margin-right: 0;
-  margin-bottom: 32px;
-  margin-left: 0;
-  padding-top: 0;
+  padding-top: 32px;
   padding-right: 16px;
-  padding-bottom: 0;
+  padding-bottom: 32px;
   padding-left: 16px;
+  border: 1px solid var(--frame-color);
+  border-top: none;
+  background-color: var(--white-color);
 }
 
 /* Footer */
@@ -359,9 +360,9 @@ button {
   padding-left: 0;
 }
 
-.footer-container {
-  display: flex;
-  flex-direction: column;
+.footer-link {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .logo-footer {
@@ -369,7 +370,6 @@ button {
 }
 
 .footer-text {
-  margin-top: 16px;
   width: 264px;
   color: var(--light-text-color);
 }
